--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -20,6 +20,8 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH8Xx4arLVqizaucS1Y6JvXluD0AkdkSM"></script>
+  
 </head>
 
 <body class="mat-typography">
